WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213100
Fix comment after blocklist transition
https://bugs.webkit.org/show_bug.cgi?id=213100
Summary
Fix comment after blocklist transition
Beth Dakin
Reported
2020-06-11 16:02:33 PDT
The blocklist transition left a nonsensical comment in PastboardMac.
Attachments
Patch
(1.26 KB, patch)
2020-06-11 16:06 PDT
,
Beth Dakin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2020-06-11 16:06:31 PDT
Created
attachment 401691
[details]
Patch
EWS
Comment 2
2020-06-11 16:43:48 PDT
Committed
r262929
: <
https://trac.webkit.org/changeset/262929
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 401691
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-06-11 16:44:16 PDT
<
rdar://problem/64275881
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug