Fix comment after blocklist transition https://bugs.webkit.org/show_bug.cgi?id=213100

Reviewed by Wenson Hsieh.

* platform/mac/PasteboardMac.mm:
(WebCore::cocoaTypeFromHTMLClipboardType):


Canonical link: https://commits.webkit.org/225883@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262929 268f45cc-cd09-0410-ab3c-d52691b4dbfc